@@ -1,3 +1,8 @@
+2019-04-09  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* contrib/usart-stm32f103.c (usart_block_sendrecv): Support
+	busy-wait when timeout_block_p == 0.
+
 2019-04-08  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* contrib/usart-stm32f103.c (usart_block_sendrecv): New.
